Fixed call to Luratech JP2_Compress_SetLicense() (Bug 695768).

The Luratech JP2_Decompress_SetLicense() routine was being called instead
of JP2_Compress_SetLicense() in the compression section.  Thanks for
Rodrigo Terra for the finding this.

Untested since Ghostscript doesn't use this code.